--- a/app/views/main/index.html.erb
+++ b/app/views/main/index.html.erb
@@ -12,20 +12,53 @@
 # You should have received a copy of the GNU Lesser General Public License along
 # with BigBlueButton; if not, see <http://www.gnu.org/licenses/>.
 %>
+<style>
+.wrapper {
+  background: #ffffff url("https://meeting2-bbb-06.bbb.komm.one/BBB-Hintergrund-2560px.jpg") ;
+  background-size: cover;
+  background-position: 95%;
+}
+.background {
+  background: none;
+}
+.row {
+  background-color: #Fafafa;
+}
+.display-4 {
+  font-size: 1.5rem;
+  font-weight: bold;
+}
+@media (min-width: 768px)
+.col-md-12 {
+    flex: 0 0 100%;
+    max-width: 600px;
+    margin: auto;
+}
+@media (min-width: 992px)
+.offset-lg-2 {
+     margin-left: 0%; 
+}
+@media (min-width: 992px)
+.col-lg-8 {
+    flex: 0 0 66.6666666667%;
+     max-width: 100%;
+}
 
+
+</style>
 <div class="background">
   <div class="container pt-9 pb-8">
     <div class="row">
       <div class="col-md-12 col-sm-12 text-center">
         <h1 id="main-text" class="display-4 mb-4"> <%= t("landing.welcome").html_safe %></h1>
         <p class="lead offset-lg-2 col-lg-8 col-sm-12 "><%= t("landing.about", href: link_to(t("greenlight"), "https://bigbluebutton.org/2018/07/09/greenlight-2-0/", target: "_blank", rel: "noopener")).html_safe %></p>
-        <%= link_to "https://youtu.be/Hso8yLzkqj8", target: "_blank" do %>
-          <h4><%= t("landing.video") %> <i class="far fa-play-circle ml-1"></i></h4>
-        <% end %>
+        <%#= link_to "https://youtu.be/Hso8yLzkqj8", target: "_blank" do %>
+          <!--<h4><%#= t("landing.video") %> <i class="far fa-play-circle ml-1"></i></h4>-->
+        <%# end %>
       </div>
 
     </div>
   </div>
 </div>
 
-<%= render "main/components/features" %>
+<%#= render "main/components/features" %>
